--- Added bower, grunt, and npm support     --- Updated html to fix angular-bootstrap upgrade     --- Fixed syntax errors according to jsLint (damn semicolons...)

--- a/templates/hospital-map.html
+++ b/templates/hospital-map.html
@@ -80,7 +80,7 @@
       </div>
       <div class="modal-body">
         <uib-accordion>
-          <uib-accordion-group is-open="statusA.open">
+          <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
                 Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
@@ -105,8 +105,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusB.open">
+          </div>
+          <div uib-accordion-group is-open="statusB.open">
             <uib-accordion-heading>
               <div>
                 Descriptions <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
@@ -129,8 +129,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusC.open">
+          </div>
+          <div uib-accordion-group is-open="statusC.open">
             <uib-accordion-heading>
               <div>
                 QR Identifier / Map URL <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC.open, 'glyphicon-chevron-right': !statusC.open}"></i>
@@ -165,7 +165,7 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
+          </div>
         </uib-accordion>
       </div>
     </script>
