--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -186,7 +186,7 @@
             <div class="row" style="margin-bottom: 20px;">
               <div class="col-md-6">
                 <uib-accordion>
-                  <uib-accordion-group is-open="accordionOpen">
+                  <div uib-accordion-group is-open="accordionOpen">
                     <uib-accordion-heading>
                       <div>
                         Medicare Card Number & Patient MRN <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': accordionOpen, 'glyphicon-chevron-right': !accordionOpen}"></i>
@@ -226,7 +226,7 @@
                         </div>
                       </div>
                     </div>  
-                  </uib-accordion-group>
+                  </div>
                 </uib-accordion>
               </div>
             </div>
