--- a/templates/post.html
+++ b/templates/post.html
@@ -87,7 +87,7 @@
       </div>
       <div class="modal-body">
         <uib-accordion>
-          <uib-accordion-group is-open="statusA.open">
+          <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
                 Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
@@ -112,8 +112,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusB.open">
+          </div>
+          <div uib-accordion-group is-open="statusB.open">
             <uib-accordion-heading>
               <div>
                 Body <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
@@ -158,8 +158,8 @@
                 </div>
               </div>    
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusC.open" ng-show="post.type == 'Announcement'">
+          </div>
+          <div uib-accordion-group is-open="statusC.open" ng-show="post.type == 'Announcement'">
             <uib-accordion-heading>
               <div>
                 Publish Date <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC.open, 'glyphicon-chevron-right': !statusC.open}"></i>
@@ -189,8 +189,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusD.open">
+          </div>
+          <div uib-accordion-group is-open="statusD.open">
             <uib-accordion-heading>
               <div>
                 Filter Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
@@ -226,8 +226,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusE.open">
+          </div>
+          <div uib-accordion-group is-open="statusE.open">
             <uib-accordion-heading>
               <div>
                 Filter Diagnoses <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
@@ -263,8 +263,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusF.open">
+          </div>
+          <div uib-accordion-group is-open="statusF.open">
             <uib-accordion-heading>
               <div>
                 Filter Doctors <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusF.open, 'glyphicon-chevron-right': !statusF.open}"></i>
@@ -300,8 +300,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusG.open">
+          </div>
+          <div uib-accordion-group is-open="statusG.open">
             <uib-accordion-heading>
               <div>
                 Filter Resources <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusG.open, 'glyphicon-chevron-right': !statusG.open}"></i>
@@ -337,7 +337,7 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
+          </div>
         </uib-accordion>
       </div>
     </script>
