--- a/templates/alias.html
+++ b/templates/alias.html
@@ -84,7 +84,7 @@
       </div>
       <div class="modal-body">
         <uib-accordion>
-          <uib-accordion-group is-open="statusA.open">
+          <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
                 Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
@@ -109,8 +109,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusB.open">
+          </div>
+          <div uib-accordion-group is-open="statusB.open">
             <uib-accordion-heading>
               <div>
                 Plain-Text Descriptions <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
@@ -132,8 +132,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusC.open">
+          </div>
+          <div uib-accordion-group is-open="statusC.open">
             <uib-accordion-heading>
               <div>
                 Attached Educational Material <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC.open, 'glyphicon-chevron-right': !statusC.open}"></i>
@@ -156,8 +156,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusD.open">
+          </div>
+          <div uib-accordion-group is-open="statusD.open">
             <uib-accordion-heading>
               <div>
                 Color Tag <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
@@ -216,8 +216,8 @@
               </div>   
             </div>      
             
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusE.open">
+          </div>
+          <div uib-accordion-group is-open="statusE.open">
             <uib-accordion-heading>
               <div>
                 Assigned Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
@@ -245,7 +245,7 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
+          </div>
         </uib-accordion>
       </div>
     </script>
