--- a/templates/educational-material.html
+++ b/templates/educational-material.html
@@ -88,7 +88,7 @@
       </div>
       <div class="modal-body">
         <uib-accordion>
-          <uib-accordion-group is-open="statusA.open">
+          <div uib-accordion-group is-open="statusA.open">
             <uib-accordion-heading>
               <div>
                 Titles <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
@@ -113,8 +113,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusB.open" ng-show="!eduMat.tocs.length">
+          </div>
+          <div uib-accordion-group is-open="statusB.open" ng-show="!eduMat.tocs.length">
             <uib-accordion-heading>
               <div>
                 URLs <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusB.open, 'glyphicon-chevron-right': !statusB.open}"></i>
@@ -139,8 +139,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusC" ng-hide="eduMat.url_EN || eduMat.url_FR">
+          </div>
+          <div uib-accordion-group is-open="statusC" ng-hide="eduMat.url_EN || eduMat.url_FR">
             <uib-accordion-heading>
               <div>
                 Table of Contents <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusC, 'glyphicon-chevron-right': !statusC}"></i>
@@ -185,8 +185,8 @@
             <div class="table-buttons">
               <button class="btn btn-primary" ng-click="addTOC()">Add another TOC</button>
             </div>
-          </uib-accordion-group>  
-          <uib-accordion-group is-open="statusH.open">
+          </div>  
+          <div uib-accordion-group is-open="statusH.open">
             <uib-accordion-heading>
               <div>
                 Supporting PDF Document<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusH.open, 'glyphicon-chevron-right': !statusH.open}"></i>
@@ -211,8 +211,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusI.open"> 
+          </div>
+          <div uib-accordion-group is-open="statusI.open"> 
             <uib-accordion-heading>
               <div>
                 Filter Demographics <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
@@ -255,8 +255,8 @@
                 </div>
               </div>
             </div>
-          </uib-accordion-group>     
-          <uib-accordion-group is-open="statusD.open">
+          </div>     
+          <div uib-accordion-group is-open="statusD.open">
             <uib-accordion-heading>
               <div>
                 Filter Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusD.open, 'glyphicon-chevron-right': !statusD.open}"></i>
@@ -292,8 +292,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusE.open">
+          </div>
+          <div uib-accordion-group is-open="statusE.open">
             <uib-accordion-heading>
               <div>
                 Filter Diagnoses <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusE.open, 'glyphicon-chevron-right': !statusE.open}"></i>
@@ -329,8 +329,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusF.open">
+          </div>
+          <div uib-accordion-group is-open="statusF.open">
             <uib-accordion-heading>
               <div>
                 Filter Doctors <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusF.open, 'glyphicon-chevron-right': !statusF.open}"></i>
@@ -366,8 +366,8 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
-          <uib-accordion-group is-open="statusG.open">
+          </div>
+          <div uib-accordion-group is-open="statusG.open">
             <uib-accordion-heading>
               <div>
                 Filter Resources <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusG.open, 'glyphicon-chevron-right': !statusG.open}"></i>
@@ -403,7 +403,7 @@
                 </li>
               </ul>
             </div>
-          </uib-accordion-group>
+          </div>
         </uib-accordion>
       </div>
     </script>
