--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -18,62 +18,62 @@
               </div>
             </div>   
             <div class="row side-panel-menu">            
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">   
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
                 <div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'alias'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToAlias()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'alias'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'alias'}">
                     <div class="panel-content">
-                      <span style="font-size: 23px;" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-                      <div class="side-panel-title" style="font-size:13px;">Tasks/Appts/Docs</div>
+                      <span style="font-size: 23px;vertical-align:middle" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+                      <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Tasks/Appts/Docs</strong></h6>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverD, active: currentPage == 'post'}" ng-mouseenter="hoverD=true" ng-mouseleave="hoverD=false" style="cursor:pointer;" ng-click="goToPost()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'post'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'post'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-comment" aria-hidden="true"></span>
-                      <div class="side-panel-title">Posts</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+                      <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Posts</strong></h6>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverE, active: currentPage == 'educational-material'}" ng-mouseenter="hoverE=true" ng-mouseleave="hoverE=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'educational-material'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'educational-material'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-book" aria-hidden="true"></span>
-                      <div class="side-panel-title">Edu Material</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                      <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Edu Material</strong></h6>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverF, active: currentPage == 'hospital-map'}" ng-mouseenter="hoverF=true" ng-mouseleave="hoverF=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'hospital-map'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'hospital-map'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-                      <div class="side-panel-title">Hospital Maps</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Hospital Maps</strong></div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverG, active: currentPage == 'notification'}" ng-mouseenter="hoverG=true" ng-mouseleave="hoverG=false" style="cursor:pointer;" ng-click="goToNotification()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'notification'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'notification'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-bell" aria-hidden="true"></span>
-                      <div class="side-panel-title">Notifications</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-bell" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Notifications</strong></div>
                     </div>
                   </div>
                 </div>
               </div>      
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverN, active: currentPage == 'test-result'}" ng-mouseenter="hoverN=true" ng-mouseleave="hoverN=false" style="cursor:pointer;" ng-click="goToTestResult()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'test-result'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'test-result'}">
                     <div class="panel-content">
-                      <i style="font-size: 21px;" class="fa fa-heartbeat" aria-hidden="true"></i>
-                      <div class="side-panel-title">Test Results</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-heartbeat" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Test Results</strong></div>
                     </div>
                   </div>
                 </div>
@@ -90,32 +90,52 @@
               </div>
             </div>   
             <div class="row side-panel-menu">
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverH, active: currentPage == 'cron'}" ng-mouseenter="hoverH=true" ng-mouseleave="hoverH=false" style="cursor:pointer;" ng-click="goToCron()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'cron'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'cron'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                      <div class="side-panel-title">Cron</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-time" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Cron</strong></div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverI, active: currentPage == 'patients'}" ng-mouseenter="hoverI=true" ng-mouseleave="hoverI=false" style="cursor:pointer;" ng-click="goToPatient()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'patients'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="fa fa-address-card" aria-hidden="true"></span>
-                      <div class="side-panel-title">Patients</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-address-card" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Patients</strong></div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverO, active: currentPage == 'patient-activity'}" ng-mouseenter="hoverO=true" ng-mouseleave="hoverO=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'patient-activity'}">
+			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
+                <div class="panel-container animated" ng-class="{pulse: hoverP, active: currentPage == 'patients-register'}" ng-mouseenter="hoverP=true" ng-mouseleave="hoverP=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients-register'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="fa fa-hourglass-half" aria-hidden="true"></span>
-                      <div class="side-panel-title">Patient Activity</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-user-plus" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Patient Registration</strong></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+                <div class="panel-container animated" ng-class="{pulse: hoverO, active: currentPage == 'patient-activity'}" ng-mouseenter="hoverO=true" ng-mouseleave="hoverO=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patient-activity'}">
+                    <div class="panel-content">
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-hourglass-half" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Patient Activity</strong></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+                <div class="panel-container animated" ng-class="{pulse: hoverL, active: currentPage == 'users'}" ng-mouseenter="hoverL=true" ng-mouseleave="hoverL=false" style="cursor:pointer;" ng-click="goToUsers()">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'users'}">
+                    <div class="panel-content">
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-users" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Users</strong></div>
                     </div>
                   </div>
                 </div>
@@ -132,32 +152,22 @@
               </div>
             </div>   
             <div class="row side-panel-menu">
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
                 <div class="panel-container animated" ng-class="{pulse: hoverK, active: currentPage == 'account'}" ng-mouseenter="hoverK=true" ng-mouseleave="hoverK=false" style="cursor:pointer;" ng-click="goToAccount()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'account'}">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'account'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                      <div class="side-panel-title">Account</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Account</strong></div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverL, active: currentPage == 'users'}" ng-mouseenter="hoverL=true" ng-mouseleave="hoverL=false" style="cursor:pointer;" ng-click="goToUsers()">
-                  <div class="side-panel-info" ng-class="{active: currentPage == 'users'}">
-                    <div class="panel-content">
-                      <span style="font-size: 21px;" class="fa fa-users" aria-hidden="true"></span>
-                      <div class="side-panel-title">Users</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6" ng-if="isAuthorized([userRoles.all])">
+              <div class="col-md-12" ng-if="isAuthorized([userRoles.all])">
                 <div class="panel-container animated" ng-class="{pulse: hoverM}" ng-mouseenter="hoverM=true" ng-mouseleave="hoverM=false" style="cursor:pointer;" ng-click="goToLogout()">
-                  <div class="side-panel-info">
+                  <div class="side-panel-info-sm">
                     <div class="panel-content">
-                      <span style="font-size: 21px;" class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                      <div class="side-panel-title">Logout</div>
+                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Logout</strong></div>
                     </div>
                   </div>
                 </div>
